--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -39,7 +39,7 @@
 
     <h1 id='top'>Our Menu</h1>
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                 <h3 id='title1'>Chicken</h3>
